--- a/ImageScrapper.ipynb
+++ b/ImageScrapper.ipynb
@@ -29,7 +29,10 @@
         "- [x] How to add image number information to the story folder suffix?\n",
         "- [ ] Update the Tag Folder Reguarly, Show lastest images\n",
         "- [ ] Popularity Trend of Story\n",
-        "- [ ] Download all images of a story on multiple pages (for competition or poll story)"
+        "- [ ] Download all images of a story on multiple pages (for competition or poll story)\n",
+        "- [ ] Given any url, download all images on that webpage, save to a given directory\n",
+        "- [ ] Download images from all image sources under the same tag\n",
+        "- [ ] Daily newsfeed for subscribers"
       ],
       "metadata": {
         "collapsed": false,
