--- a/ImageScrapper.ipynb
+++ b/ImageScrapper.ipynb
@@ -32,7 +32,8 @@
         "- [ ] Download all images of a story on multiple pages (for competition or poll story)\n",
         "- [ ] Given any url, download all images on that webpage, save to a given directory\n",
         "- [ ] Download images from all image sources under the same tag\n",
-        "- [ ] Daily newsfeed for subscribers"
+        "- [ ] Daily newsfeed for subscribers\n",
+        "- [ ] Performance Enhancement: Better move file"
       ],
       "metadata": {
         "collapsed": false,
@@ -53,6 +54,12 @@
         "# Fuligets Scrapper\n",
         "# http://www.bfpgf.com/\n",
         "\n",
+        "# Input a full URL Address\n",
+        "url = 'http://www.bfpgf.com/fsh/82835.html/'\n",
+        "\n",
+        "######################\n",
+        "# Don't Change Below #\n",
+        "######################\n",
         "from bs4 import BeautifulSoup, Comment\n",
         "from fake_useragent import UserAgent\n",
         "from tqdm import *\n",
@@ -70,9 +77,6 @@
         "                #f.flush() commented by recommendation from J.F.Sebastian\n",
         "    shutil.move(local_filename,path+'/'+local_filename)\n",
         "\n",
-        "# Input URL Name\n",
-        "url = 'http://www.bfpgf.com/yld/83152.html'\n",
-        "\n",
         "# Get Story Name\n",
         "headers = {'User-Agent': str(UserAgent().chrome)}\n",
         "r = requests.get(url,headers)\n",
@@ -83,14 +87,17 @@
         "os.makedirs(name)\n",
         "\n",
         "# Confirm Pages\n",
-        "comments=soup.find_all(string=lambda text:isinstance(text,Comment))\n",
-        "for c in comments:\n",
-        "    if url in c:\n",
-        "        text = str(c)\n",
-        "        pages = int(re.compile(\".*<span>(.*)</span>.*\").match(text).group(1))\n",
-        "    else: \n",
-        "        pass\n",
-        "    \n",
+        "if len(soup.find_all('div',class_='wp-pagenavi')) == 1:\n",
+        "    comments=soup.find_all(string=lambda text:isinstance(text,Comment))\n",
+        "    for c in comments:\n",
+        "        if url in c:\n",
+        "            text = str(c)\n",
+        "            pages = int(re.compile(\".*<span>(.*)</span>.*\").match(text).group(1))\n",
+        "        else: \n",
+        "            pass\n",
+        "else: \n",
+        "    pages = 1\n",
+        "        \n",
         "# Download Images\n",
         "for i in tqdm(range(1,pages+1,1)):\n",
         "    url_idv = url+'/'+str(i)\n",
@@ -100,10 +107,18 @@
         "    soup = BeautifulSoup(r.text,'lxml')\n",
         "    for img in soup.find('article',class_='article-content').find_all('img'):\n",
         "        download_file('http://www.bfpgf.com'+img['src'],name)\n",
-        "    time.sleep(0.05)"
+        "    time.sleep(0.01)"
       ],
-      "outputs": [],
-      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "100%|██████████| 1/1 [00:17<00:00, 17.51s/it]\n"
+          ]
+        }
+      ],
+      "execution_count": 32,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
@@ -227,8 +242,10 @@
         "# Input a Tag of your interests, with top input numbers of stories displayed.\n",
         "# Images will be saved in folders under the story name separately at the path where this Jupyter Notebook file locates.\n",
         "\n",
+        "##### INPUT AREA ######\n",
         "tag_input = '模特' # Name the tag you want\n",
         "top_story_num_input = 5 # 'None': for all stories; 5: for top 5 stories of the tag\n",
+        "#######################\n",
         "\n",
         "get_stories_by_tag(tag_input,top_story_num_input)\n",
         "\n",
