--- a/ImageScrapper.ipynb
+++ b/ImageScrapper.ipynb
@@ -22,7 +22,7 @@
         "2. FakeAgent: fake browser login\n",
         "\n",
         "## Image source\n",
-        "1. http://www.bfpgf.com/yld/82777.html\n",
+        "1. http://www.bfpgf.com/fsh/82835.html/\n",
         "2. http://93.t9p.today/forumdisplay.php?fid=19&page=1\n",
         "\n",
         "## Improvements\n",
@@ -109,16 +109,8 @@
         "        download_file('http://www.bfpgf.com'+img['src'],name)\n",
         "    time.sleep(0.01)"
       ],
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 1/1 [00:17<00:00, 17.51s/it]\n"
-          ]
-        }
-      ],
-      "execution_count": 32,
+      "outputs": [],
+      "execution_count": null,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
