--- a/ImageScrapper.ipynb
+++ b/ImageScrapper.ipynb
@@ -24,6 +24,9 @@
         "## Image source\n",
         "1. http://www.bfpgf.com/fsh/82835.html/\n",
         "2. http://93.t9p.today/forumdisplay.php?fid=19&page=1\n",
+        "3. Pinterest\n",
+        "4. Instagram\n",
+        "5. Weibo\n",
         "\n",
         "## Improvements\n",
         "- [x] How to add image number information to the story folder suffix?\n",
@@ -33,7 +36,10 @@
         "- [ ] Given any url, download all images on that webpage, save to a given directory\n",
         "- [ ] Download images from all image sources under the same tag\n",
         "- [ ] Daily newsfeed for subscribers\n",
-        "- [ ] Performance Enhancement: Better move file"
+        "- [ ] Performance Enhancement: Better move file\n",
+        "- [ ] Facial recognition by dlib to classify different stars\n",
+        "- [ ] Build as an API\n",
+        "- [ ] Web application: Django + Vue.JS"
       ],
       "metadata": {
         "collapsed": false,
@@ -55,7 +61,7 @@
         "# http://www.bfpgf.com/\n",
         "\n",
         "# Input a full URL Address\n",
-        "url = 'http://www.bfpgf.com/fsh/82835.html/'\n",
+        "url = 'http://www.bfpgf.com/yld/82962.html'\n",
         "\n",
         "######################\n",
         "# Don't Change Below #\n",
@@ -78,8 +84,8 @@
         "    shutil.move(local_filename,path+'/'+local_filename)\n",
         "\n",
         "# Get Story Name\n",
-        "headers = {'User-Agent': str(UserAgent().chrome)}\n",
-        "r = requests.get(url,headers)\n",
+        "#headers = {'User-Agent': str(UserAgent().chrome)}\n",
+        "r = requests.get(url)#,headers)\n",
         "soup = BeautifulSoup(r.text,'lxml')\n",
         "name = soup.find('h1',class_=\"article-title\").find('a').get_text()\n",
         "\n",
@@ -109,8 +115,68 @@
         "        download_file('http://www.bfpgf.com'+img['src'],name)\n",
         "    time.sleep(0.01)"
       ],
-      "outputs": [],
-      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "Error occurred during loading data. Trying to use cache server https://fake-useragent.herokuapp.com/browsers/0.1.8\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/anaconda/lib/python3.6/urllib/request.py\", line 1318, in do_open\n",
+            "    encode_chunked=req.has_header('Transfer-encoding'))\n",
+            "  File \"/anaconda/lib/python3.6/http/client.py\", line 1239, in request\n",
+            "    self._send_request(method, url, body, headers, encode_chunked)\n",
+            "  File \"/anaconda/lib/python3.6/http/client.py\", line 1285, in _send_request\n",
+            "    self.endheaders(body, encode_chunked=encode_chunked)\n",
+            "  File \"/anaconda/lib/python3.6/http/client.py\", line 1234, in endheaders\n",
+            "    self._send_output(message_body, encode_chunked=encode_chunked)\n",
+            "  File \"/anaconda/lib/python3.6/http/client.py\", line 1026, in _send_output\n",
+            "    self.send(msg)\n",
+            "  File \"/anaconda/lib/python3.6/http/client.py\", line 964, in send\n",
+            "    self.connect()\n",
+            "  File \"/anaconda/lib/python3.6/http/client.py\", line 1392, in connect\n",
+            "    super().connect()\n",
+            "  File \"/anaconda/lib/python3.6/http/client.py\", line 936, in connect\n",
+            "    (self.host,self.port), self.timeout, self.source_address)\n",
+            "  File \"/anaconda/lib/python3.6/socket.py\", line 724, in create_connection\n",
+            "    raise err\n",
+            "  File \"/anaconda/lib/python3.6/socket.py\", line 713, in create_connection\n",
+            "    sock.connect(sa)\n",
+            "socket.timeout: timed out\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/anaconda/lib/python3.6/site-packages/fake_useragent/utils.py\", line 67, in get\n",
+            "    context=context,\n",
+            "  File \"/anaconda/lib/python3.6/urllib/request.py\", line 223, in urlopen\n",
+            "    return opener.open(url, data, timeout)\n",
+            "  File \"/anaconda/lib/python3.6/urllib/request.py\", line 526, in open\n",
+            "    response = self._open(req, data)\n",
+            "  File \"/anaconda/lib/python3.6/urllib/request.py\", line 544, in _open\n",
+            "    '_open', req)\n",
+            "  File \"/anaconda/lib/python3.6/urllib/request.py\", line 504, in _call_chain\n",
+            "    result = func(*args)\n",
+            "  File \"/anaconda/lib/python3.6/urllib/request.py\", line 1361, in https_open\n",
+            "    context=self._context, check_hostname=self._check_hostname)\n",
+            "  File \"/anaconda/lib/python3.6/urllib/request.py\", line 1320, in do_open\n",
+            "    raise URLError(err)\n",
+            "urllib.error.URLError: <urlopen error timed out>\n",
+            "\n",
+            "During handling of the above exception, another exception occurred:\n",
+            "\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/anaconda/lib/python3.6/site-packages/fake_useragent/utils.py\", line 154, in load\n",
+            "    for item in get_browsers(verify_ssl=verify_ssl):\n",
+            "  File \"/anaconda/lib/python3.6/site-packages/fake_useragent/utils.py\", line 97, in get_browsers\n",
+            "    html = get(settings.BROWSERS_STATS_PAGE, verify_ssl=verify_ssl)\n",
+            "  File \"/anaconda/lib/python3.6/site-packages/fake_useragent/utils.py\", line 84, in get\n",
+            "    raise FakeUserAgentError('Maximum amount of retries reached')\n",
+            "fake_useragent.errors.FakeUserAgentError: Maximum amount of retries reached\n"
+          ]
+        }
+      ],
+      "execution_count": 2,
       "metadata": {
         "collapsed": false,
         "outputHidden": false,
