--- a/MediaScrapper.ipynb
+++ b/MediaScrapper.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Image Scrapper\n",
+        "# Media Scrapper\n",
         "## Glossary\n",
         "1. Story: one topic of images that often displays on multiple pages\n",
         "\n",
@@ -194,7 +194,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# 91 Scrapper\n",
+        "# 91 Scrapper: Image\n",
         "# http://93.t9p.today/index.php\n",
         "\n",
         "from bs4 import BeautifulSoup, Comment\n",
