--- a/MediaScrapper.ipynb
+++ b/MediaScrapper.ipynb
@@ -187,7 +187,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 91 Scrapper"
+        "# 91 Scrapper: Image"
       ],
       "metadata": {}
     },
@@ -297,6 +297,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# 91 Scrapper: Image\n",
         "# Input a Tag of your interests, with top input numbers of stories displayed.\n",
         "# Images will be saved in folders under the story name separately at the path where this Jupyter Notebook file locates.\n",
         "\n",
@@ -317,6 +318,107 @@
         "# Total Numbers of Images under a Tag\n",
         "print (tag_input,'标签共有图片：',image_number_total)"
       ],
+      "outputs": [],
+      "execution_count": null,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 91 Scrapper: Video"
+      ],
+      "metadata": {}
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 91 Scrapper: Video\n",
+        "\n",
+        "from bs4 import BeautifulSoup, Comment\n",
+        "from fake_useragent import UserAgent\n",
+        "from tqdm import *\n",
+        "import requests, os, datetime, shutil, re, time\n",
+        "import pandas as pd\n",
+        "\n",
+        "# Download File Common Function\n",
+        "def download_file(url):\n",
+        "    local_filename = url.split('/')[-1]\n",
+        "    # NOTE the stream=True parameter\n",
+        "    r = requests.get(url, stream=True)\n",
+        "    with open(local_filename, 'wb') as f:\n",
+        "        for chunk in r.iter_content(chunk_size=1024): \n",
+        "            if chunk: # filter out keep-alive new chunks\n",
+        "                f.write(chunk)\n",
+        "\n",
+        "def get_video_url(url):\n",
+        "    # Get the video url from the video's page url\n",
+        "    headers = {'User-Agent': str(UserAgent().chrome)}\n",
+        "    r = requests.get(url,headers)\n",
+        "    r.encoding = 'utf-8'\n",
+        "    soup = BeautifulSoup(r.text,'lxml')\n",
+        "    soup.find('source', src=True, type='video/mp4')"
+      ],
+      "outputs": [],
+      "execution_count": 4,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "get_video_url('http://91porn.com/view_video.php?viewkey=49d446466df6c7912edb&page=1&viewtype=basic&category=hot')"
+      ],
+      "outputs": [],
+      "execution_count": 5,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "url = 'http://91porn.com/view_video.php?viewkey=49d446466df6c7912edb&page=1&viewtype=basic&category=hot'\n",
+        "\n",
+        "# Get the video url from the video's page url\n",
+        "headers = {'User-Agent': str(UserAgent().chrome)}\n",
+        "r = requests.get(url,headers)\n",
+        "r.encoding = 'utf-8'\n",
+        "soup = BeautifulSoup(r.text,'lxml')\n",
+        "soup.find('source', src=True, type='video/mp4')"
+      ],
+      "outputs": [],
+      "execution_count": 7,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "download_file('http://185.38.13.159//mp43/253097.mp4?st=oxFGYsXz1lcmhpHOpr8-8Q&e=1520023447')"
+      ],
+      "outputs": [],
+      "execution_count": 11,
+      "metadata": {
+        "collapsed": false,
+        "outputHidden": false,
+        "inputHidden": false
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
       "outputs": [],
       "execution_count": null,
       "metadata": {
